Update .env.example and deploy.sh

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-APP_NAME=Hrm-tenant
+APP_NAME=HRM-Tenant
 APP_ENV=production
 # APP_ENV=local
 APP_KEY=
@@ -25,8 +25,8 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=hrm_tenant
-DB_USERNAME=hrm_tenant_user
+DB_DATABASE=admin_hrm_tenant
+DB_USERNAME=admin_hrm_tenant_user
 DB_PASSWORD=Admin123@
 # DB_DATABASE=hrm_tenant
 # DB_USERNAME=root
